2005-01-15  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* data/glade/ProgressWindow.glade:
	* libmuine/Makefile.am:
	R libmuine/markup-utils.c:
	R libmuine/markup-utils.h:
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/CoverGetter.cs:
	* src/EllipsizingLabel.cs:
	* src/ErrorDialog.cs:
	* src/KeyUtils.cs:
	* src/Makefile.am:
	R src/MarkupUtils.cs:
	* src/PlaylistWindow.cs:
	* src/ProgressWindow.cs:
	* src/StringUtils.cs:

	Obsolete MarkupUtils, we use pango xml-style markup instead.
	We add it in the code everywhere, apart from the playlist label-
	it is in the translatable string there, otherwise we can't do RTL right.
	This was a bug before.

2005-01-15  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/string-utils.c: (string_utils_strip_non_alnum):
	* libmuine/string-utils.h:
	* src/AddWindowEntry.cs:
	* src/StringUtils.cs:

	Stop the lunacy of regenerating SearchBits for each item
	we are trying to match. Back on speed.

	Also add a "different" bool to strip_non_alnum, so that we
	don't have to strcmp.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:
	* libmuine/string-utils.c: (string_utils_strip_non_alnum):
	* libmuine/string-utils.h:
	* src/Album.cs:
	* src/Song.cs:
	* src/StringUtils.cs:

	Strip non alphanumeric chars (and non-spaces) from the SearchKey,
	so that "rem" also yiels "R.E.M.".

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/SongDatabase.cs:

	Add Album.RemoveArtistsAndPerformers.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Support setting both a removed album as well as an added album
	in the signal request. Needed for changed songs.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Restore SignalRequest constructor.

2005-01-14  Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/IPlayer.cs:
	* PluginLib/Plugin.cs:
	* doc/en/Muine.PluginLib/IPlayer.xml:
	* doc/en/Muine.PluginLib/TickEventHandler.xml:
	* src/Player.cs:
	* src/PlaylistWindow.cs: